fdo#35270 - enable caching of grammar checker properties

Thanks to Daniel Naber for some great detective work

Change-Id: I8318368971c3d34064ba2e59e757a2e5839d7d6b